export const snapshot = {};

snapshot[`Document List Command - JSON Output 1`] = `
stdout:
'{
  "nodes": [
    {
      "id": "doc-1",
      "title": "Delegation System Spec",
      "slugId": "d4b93e3b2695",
      "url": "https://linear.app/test/document/delegation-system-spec-d4b93e3b2695",
      "updatedAt": "2026-01-18T10:30:00Z",
      "project": {
        "name": "TinyCloud SDK",
        "slugId": "tinycloud-sdk"
      },
      "issue": null,
      "creator": {
        "name": "John Doe"
      }
    }
  ],
  "pageInfo": {
    "hasNextPage": false,
    "endCursor": null
  }
}
'
stderr:
""
`;

snapshot[`Document List Command - Empty Results 1`] = `
stdout:
"No documents found.
"
stderr:
""
`;

snapshot[`Document List Command - Filter By Issue JSON Output 1`] = `
stdout:
'{
  "nodes": [],
  "pageInfo": {
    "hasNextPage": false,
    "endCursor": null
  }
}
'
stderr:
""
`;

snapshot[`Document List Command - Rejects Invalid Limit 1`] = `
stdout:
""
stderr:
"✗ Failed to list documents: --limit must be a positive integer
"
`;
